<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="marrit.marritleenstra_pset6_1.CommunityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/TV_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/community"
                    android:textSize="18sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/TV_total_days"
                    android:paddingTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_days"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/TV_number_total_days_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="20"
                    android:layout_below="@id/TV_total_days"
                    android:layout_centerHorizontal="true"
                    android:textSize="50sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TV_number_total_days_community"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="30dp"
                    android:text="@string/days"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TV_total_animals_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/total_animals"/>

                <TextView
                    android:id="@+id/TV_number_total_animals_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TV_total_animals_community"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="30sp"
                    android:text="1"/>

                <TextView
                    android:id="@+id/TV_total_CO2_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_below="@id/TV_number_total_animals_community"
                    android:text="@string/total_CO2"/>

                <TextView
                    android:id="@+id/TV_number_total_CO2_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TV_total_CO2_community"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="30sp"
                    android:text="100"/>

                <TextView
                    android:id="@+id/TV_total_participants_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_below="@id/TV_number_total_CO2_community"
                    android:text="@string/total_participants_today"/>

                <TextView
                    android:id="@+id/TV_number_total_participants_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TV_total_participants_today"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="30sp"
                    android:text="980"/>


                <TextView
                    android:id="@+id/TV_total_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_below="@id/TV_number_total_participants_today"
                    android:text="@string/total_participants"/>

                <TextView
                    android:id="@+id/TV_number_total_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TV_total_participants"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="30sp"
                    android:text="1000"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>

